--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="charmander">#B64E3D</color>
     <color name="squirtle">#378AAF</color>
     <color name="bulbasaur">#377837</color>
+    <color name="blastoise">#8cbfe6</color>
     <color name="barro">#c65533</color>
     <color name="blue_marine">#0E1B42</color>
     <color name="greenhill">#076C6C</color>
