--- a/app/src/main/res/drawable/card_user.xml
+++ b/app/src/main/res/drawable/card_user.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/light_grey"/>
             <corners android:radius="100dp"/>
-            <stroke android:color="@color/black"
+            <stroke android:color="@color/blastoise"
                 android:width="2dp"/>
         </shape>
     </item>
