--- a/app/src/main/res/layout/activity_user_config.xml
+++ b/app/src/main/res/layout/activity_user_config.xml
@@ -1,18 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_backgroud">
+    android:background="@drawable/gradient_backgroud"
+    tools:context=".edit_user">
 
     <ImageView
+        android:id="@+id/imgUser"
         style="@style/card_user"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <View
+        android:id="@+id/card_User"
+        style="@style/ContainerComponents"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/imgUser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/icon_email"
+        style="@style/icon_email"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/txt_email_usuario"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/card_User"
+        app:layout_constraintTop_toTopOf="@+id/txt_email_usuario" />
+
+    <ImageView
+        android:id="@+id/icon_person"
+        style="@style/icon_person"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/txt_nome_usuario"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/card_User"
+        app:layout_constraintTop_toTopOf="@+id/txt_nome_usuario" />
+
+    <TextView
+        android:id="@+id/txt_nome_usuario"
+        style="@style/txtCardUser"
+        android:textSize="24sp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="@+id/card_User"
+        app:layout_constraintStart_toStartOf="@+id/card_User"
+        app:layout_constraintEnd_toEndOf="@+id/card_User"/>
+
+    <TextView
+        android:id="@+id/txt_email_usuario"
+        style="@style/txtCardUser"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/card_User"
+        app:layout_constraintStart_toStartOf="@+id/card_User"
+        app:layout_constraintTop_toBottomOf="@+id/txt_nome_usuario" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_editar"
+        style="@style/btnCadastrar1"
+        android:text="Editar"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@+id/card_User"
+        app:layout_constraintEnd_toStartOf="@+id/btn_sair"
+        app:layout_constraintTop_toBottomOf="@+id/card_User"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sair"
+        style="@style/btnCadastrar1"
+        android:text="Sair"
+        android:onClick="sair"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toEndOf="@+id/btn_editar"
+        app:layout_constraintEnd_toEndOf="@+id/card_User"
+        app:layout_constraintTop_toBottomOf="@+id/card_User"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
