--- a/app/src/main/res/layout/activity_user_config.xml
+++ b/app/src/main/res/layout/activity_user_config.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/gradient_backgroud"
     tools:context=".edit_user">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgUser"
         style="@style/card_user"
         android:layout_width="200dp"
@@ -16,6 +16,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/btn_upload"
+        style="@style/btn_up_img"
+        app:layout_constraintBottom_toBottomOf="@+id/imgUser"
+        app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
+
 
     <View
         android:id="@+id/card_User"
@@ -31,7 +38,7 @@
     <ImageView
         android:id="@+id/icon_email"
         style="@style/icon_email"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintEnd_toStartOf="@+id/txt_email_usuario"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/card_User"
@@ -40,7 +47,7 @@
     <ImageView
         android:id="@+id/icon_person"
         style="@style/icon_person"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintEnd_toStartOf="@+id/txt_nome_usuario"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/card_User"
@@ -58,8 +65,10 @@
     <TextView
         android:id="@+id/txt_email_usuario"
         style="@style/txtCardUser"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="5dp"
+        android:textSize="18sp"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@+id/card_User"
         app:layout_constraintStart_toStartOf="@+id/card_User"
         app:layout_constraintTop_toBottomOf="@+id/txt_nome_usuario" />
