--- a/app/src/main/res/drawable/card_user.xml
+++ b/app/src/main/res/drawable/card_user.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_grey"/>
+            <solid android:color="@color/aaron"/>
             <corners android:radius="100dp"/>
             <stroke android:color="@color/blastoise"
                 android:width="2dp"/>
