--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,96 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="@drawable/gradient_backgroud"
-    tools:context=".teste">
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient_backgroud"
+        tools:context=".teste">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:src="@drawable/icone_login"
-        app:layout_constraintBottom_toTopOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view_card"
-        style="@style/ContainerComponents"
-        android:layout_width="350dp"
-        android:layout_height="390dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/textView4"
-        style="@style/textCadastro"
-        android:layout_marginTop="4dp"
-        android:text="@string/inserir_produto"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@+id/inputNome"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.29" />
-
-    <EditText
-        android:id="@+id/inputSenha"
-        style="@style/txtQuantidade"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="90dp"
-        android:autofillHints="true"
-        android:drawableRight="@drawable/ic_olho"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_Cadastrar"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
-
-    <EditText
-        android:id="@+id/inputNome"
-        style="@style/txtCadastro"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp"
-        android:hint="Nome"
-        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/inputEmail"
-        style="@style/txtCadastro"
-        android:drawableRight="@drawable/ic_email"
-        android:hint="E-mail"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_Cadastrar"
-        style="@style/btnCadastrar1"
-        android:text="@string/txtBtnCadastrar"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.965" />
+        <View
+            android:id="@+id/view_card"
+            style="@style/ContainerComponents"
+            android:layout_width="350dp"
+            android:layout_height="450dp"
+            android:layout_marginTop="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgUser"
+            style="@style/card_user"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <ImageButton
+            android:id="@+id/btn_upload"
+            style="@style/btn_up_img"
+            app:layout_constraintBottom_toBottomOf="@+id/imgUser"
+            app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
+
+
+        <TextView
+            android:id="@+id/txtDados"
+            style="@style/textCadastro"
+            android:layout_marginTop="20dp"
+            android:text="@string/inserir_produto"
+            android:textSize="26sp"
+            app:layout_constraintBottom_toTopOf="@+id/inputNome"
+            app:layout_constraintEnd_toEndOf="@+id/view_card"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintStart_toStartOf="@+id/view_card"
+            app:layout_constraintTop_toBottomOf="@+id/imgUser"
+            app:layout_constraintVertical_bias="0.29" />
+
+
+
+        <EditText
+            android:id="@+id/inputNome"
+            style="@style/txtCadastro"
+            android:layout_marginTop="20dp"
+            android:hint="Nome"
+            app:layout_constraintBottom_toTopOf="@+id/inputEmail"
+            app:layout_constraintEnd_toEndOf="@+id/view_card"
+            app:layout_constraintStart_toStartOf="@+id/view_card"
+            app:layout_constraintTop_toBottomOf="@+id/txtDados"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <EditText
+            android:id="@+id/inputEmail"
+            style="@style/txtCadastro"
+            android:drawableRight="@drawable/ic_email"
+            android:hint="E-mail"
+            android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toEndOf="@+id/view_card"
+            app:layout_constraintStart_toStartOf="@+id/view_card"
+            app:layout_constraintTop_toBottomOf="@+id/inputNome" />
+
+        <EditText
+            android:id="@+id/inputSenha"
+            style="@style/txtQuantidade"
+            android:drawableRight="@drawable/ic_olho"
+            android:hint="Senha"
+            android:inputType="textPassword"
+            android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toEndOf="@+id/view_card"
+            app:layout_constraintStart_toStartOf="@+id/view_card"
+            app:layout_constraintTop_toBottomOf="@+id/inputEmail"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_Cadastrar"
+            style="@style/btnCadastrar1"
+            android:text="@string/txtBtnCadastrar"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toStartOf="@+id/btn_sair"
+            app:layout_constraintStart_toStartOf="@+id/view_card"
+            app:layout_constraintTop_toBottomOf="@+id/inputSenha"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_sair"
+            style="@style/btnCadastrar1"
+            android:text="Sair"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toEndOf="@+id/btn_Cadastrar"
+            app:layout_constraintTop_toBottomOf="@+id/inputSenha"
+            app:layout_constraintEnd_toEndOf="@+id/view_card"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
