--- a/app/src/main/res/layout/activity_user_config.xml
+++ b/app/src/main/res/layout/activity_user_config.xml
@@ -24,13 +24,24 @@
         app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
 
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_salvar_img"
+        style="@style/btnCadastrar1"
+        android:text="@string/salvarImg"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/imgUser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
     <View
         android:id="@+id/card_User"
         style="@style/ContainerComponents"
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgUser"
+        app:layout_constraintTop_toBottomOf="@+id/btn_salvar_img"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
