--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,15 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
+    <style name="txtInputLogin">
+        <item name="android:background">@drawable/input_corner_radius</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:ems">10</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_width">300dp</item>
+    </style>
+
 
     <style name="txtCadastro">
         <item name="android:layout_height">50dp</item>
@@ -92,6 +101,14 @@
     </style>
 
 
+    <style name="btnLogin" parent="btn">
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/btn_backgroud</item>
+    </style>
+
     <style name="btnCadastrar" parent="btn">
         <item name="android:textStyle">normal</item>
         <item name="android:layout_height">50dp</item>
@@ -155,8 +172,8 @@
     </style>
 
     <style name="txt_usuario_menu">
-        <item name="android:textColor">@color/linen</item>
-        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">28sp</item>
     </style>
 
     <style name="card_user">
@@ -183,6 +200,16 @@
         <item name="android:background">@drawable/ic_person</item>
         <item name="android:layout_width">30dp</item>
         <item name="android:layout_height">30dp</item>
+    </style>
+
+    <style name="lbl_nova_conta">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_marginBottom">100dp</item>
+        <item name="android:text">@string/cadastrar_nova_conta</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/viper</item>
     </style>
 
 
