--- a/app/src/main/res/layout/activity_cad_produto.xml
+++ b/app/src/main/res/layout/activity_cad_produto.xml
@@ -7,36 +7,38 @@
     android:background="@drawable/gradient_backgroud"
     tools:context=".cad_produto">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:src="@drawable/icone_login"
-        app:layout_constraintBottom_toTopOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view_card"
         style="@style/ContainerComponents"
         android:layout_width="350dp"
-        android:layout_height="530dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="550dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgUser"
+        style="@style/card_user"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.534" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/btn_upload"
+        style="@style/btn_up_img"
+        app:layout_constraintBottom_toBottomOf="@+id/imgUser"
+        app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
 
     <TextView
         android:id="@+id/textView4"
         style="@style/textCadastro"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="110dp"
         android:text="@string/cad_produto"
         android:textAlignment="center"
         android:textSize="28sp"
@@ -46,148 +48,59 @@
 
     <EditText
         android:id="@+id/edit_Cod"
-        style="@style/txtInput"
-        android:layout_width="210dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="24dp"
-        android:ems="10"
+        style="@style/txtCadastro1"
         android:hint="Cod"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.001" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
         android:id="@+id/edit_Desc"
-        style="@style/txtInput"
-        android:layout_width="190dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:ems="10"
+        style="@style/txtCadastro1"
+        android:layout_height="100dp"
+        android:layout_marginTop="10dp"
         android:gravity="start|top"
         android:hint="Insira a descrição do seu produto aqui."
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toBottomOf="@+id/edit_Valor"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_Valor" />
 
-    <TextView
-        android:id="@+id/textCod"
-        style="@style/textCadastro"
-        android:layout_marginTop="37dp"
-        android:text="@string/codProduto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.08" />
 
-    <TextView
-        android:id="@+id/textDesc"
-        style="@style/textCadastro"
-        android:text="@string/descProduto"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.634" />
 
-    <TextView
-        android:id="@+id/textNome"
-        style="@style/textCadastro"
-        android:text="@string/nomeProduto"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.276" />
 
-    <TextView
-        android:id="@+id/textValor"
-        style="@style/textCadastro"
-        android:text="@string/valorProduto"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.038"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.517" />
-
-    <TextView
-        android:id="@+id/textQtd"
-        style="@style/textCadastro"
-        android:text="@string/qtdProduto"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
-        app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.051"
-        app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toTopOf="@+id/view_card"
-        app:layout_constraintVertical_bias="0.402" />
 
     <EditText
         android:id="@+id/edit_Valor"
-        style="@style/txtInput"
-        android:layout_width="140dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="199dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        style="@style/txtCadastro1"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="R$ 00,00"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view_card"
-        app:layout_constraintTop_toBottomOf="@+id/edit_Qtd"
-        app:layout_constraintVertical_bias="0.007" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_Qtd" />
 
     <EditText
         android:id="@+id/edit_Qtd"
-        style="@style/txtInput"
-        android:layout_width="140dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="213dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:ems="10"
+        style="@style/txtCadastro1"
+        android:layout_marginTop="10dp"
         android:hint="Qtd"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintStart_toEndOf="@+id/textQtd"
         app:layout_constraintStart_toStartOf="@+id/view_card"
         app:layout_constraintTop_toBottomOf="@+id/edit_Nome"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/edit_Nome"
-        style="@style/txtInput"
-        android:layout_width="210dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:ems="10"
+        style="@style/txtCadastro1"
+        android:layout_marginTop="10dp"
         android:hint="Nome"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
-        app:layout_constraintStart_toEndOf="@+id/textNome"
         app:layout_constraintStart_toStartOf="@+id/view_card"
         app:layout_constraintTop_toBottomOf="@+id/edit_Cod"
         app:layout_constraintVertical_bias="0.0" />
@@ -197,7 +110,6 @@
         style="@style/btnCadastrar1"
         android:layout_marginTop="20dp"
         android:text="@string/txtBtnCadastrar"
-        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_Desc"
