--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,33 +9,31 @@
 
 
     <View
-        style="@style/btnCadastrar1"
-        android:layout_width="350dp"
+        android:id="@+id/card_usuario"
+        style="@style/card_usuario"
+        android:layout_width="340dp"
         android:layout_height="150dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+
     <ImageButton
         android:id="@+id/btn_Add"
         style="@style/botao_menu_add"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toEndOf="@+id/btn_EditAccount"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
-
+        app:layout_constraintTop_toBottomOf="@+id/card_usuario" />
 
     <ImageButton
         android:id="@+id/btn_Report"
         style="@style/botao_menu_report"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_Sair"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_EditAccount"
@@ -45,19 +43,17 @@
         android:id="@+id/btn_EditAccount"
         style="@style/botao_menu_edit_account"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="29dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_Add"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintTop_toBottomOf="@+id/card_usuario" />
 
     <ImageButton
         android:id="@+id/btn_Sair"
         style="@style/botao_menu_sair"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btn_Report"
@@ -71,9 +67,9 @@
         style="@style/card_user"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/card_usuario"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -81,12 +77,13 @@
     <TextView
         android:id="@+id/txtUsuario"
         style="@style/txt_usuario_menu"
+        android:textColor="@color/linen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="45dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="20dp"
         android:text="Exemplo"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/card_usuario"
         app:layout_constraintTop_toTopOf="parent" />
 
 
