--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,18 @@
         <item name="android:inputType">textPersonName</item>
     </style>
 
+    <style name="txtCadastro1">
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/input_corner_radius</item>
+        <item name="android:ems">10</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:layout_width">310dp</item>
+        <item name="android:inputType">textPersonName</item>
+    </style>
+
 
     <style name="textCadastro">
         <item name="android:textSize">26dp</item>
@@ -124,6 +136,14 @@
         <item name="android:layout_width">140dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:background">@drawable/btn_background1</item>
+    </style>
+
+    <style name="card_usuario">
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/card_user_background</item>
     </style>
 
 
