--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -163,23 +163,23 @@
     <style name="botao_menu_add">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:background">@drawable/botao_menu_add</item>
+        <item name="android:background">@drawable/botao_menu_vermelho</item>
         <item name="srcCompat">@drawable/ic_add</item>
+    </style>
+
+
+    <style name="botao_lista">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/botao_menu_azul</item>
+        <item name="srcCompat">@drawable/ic_list</item>
     </style>
 
 
     <style name="botao_menu_edit_account">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:background">@drawable/botao_menu_edit_account</item>
-        <item name="srcCompat">@drawable/ic_edit_account</item>
-    </style>
-
-
-    <style name="botao_menu_report">
-        <item name="android:layout_width">150dp</item>
-        <item name="android:layout_height">150dp</item>
-        <item name="android:background">@drawable/botao_menu_report</item>
+        <item name="android:background">@drawable/botao_menu_verde</item>
         <item name="srcCompat">@drawable/ic_report</item>
     </style>
 
@@ -187,7 +187,7 @@
     <style name="botao_menu_sair">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:background">@drawable/botao_menu_sair</item>
+        <item name="android:background">@drawable/botao_menu_amarelo</item>
         <item name="srcCompat">@drawable/ic_sair</item>
     </style>
 
