--- a/app/src/main/res/drawable/btn_rounded.xml
+++ b/app/src/main/res/drawable/btn_rounded.xml
@@ -3,4 +3,7 @@
 
     <solid android:color="@color/blastoise"/>
     <corners android:radius="50dp"/>
+    <stroke android:color="@color/blk75"
+        android:width="1sp"
+    />
 </shape>
