--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,6 +146,15 @@
         <item name="android:background">@drawable/card_user_background</item>
     </style>
 
+    <style name="card_produto">
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">140dp</item>
+        <item name ="android:radius">30sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/card_produto_bg</item>
+    </style>
+
 
     <style name="imgBotao">
         <item name="android:layout_width">match_parent</item>
@@ -203,6 +212,13 @@
         <item name="android:layout_height">200dp</item>
     </style>
 
+    <style name="card_grafico">
+        <item name="android:background">@drawable/card_user</item>
+        <item name="srcCompat">@drawable/icone_app</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">200dp</item>
+    </style>
+
     <style name="btn_up_img">
         <item name="android:background">@drawable/btn_rouded_cam</item>
         <item name="srcCompat">@drawable/ic_menu_camera</item>
@@ -230,6 +246,25 @@
         <item name="android:text">@string/cadastrar_nova_conta</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/viper</item>
+    </style>
+
+    <style name="txtProduto">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10sp</item>
+        <item name="android:layout_marginStart">30sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="btnProduto">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginBottom">30sp</item>
+        <item name="android:layout_marginStart">30sp</item>
+        <item name="android:background">@drawable/btn_rounded</item>
+        <item name="srcCompat">@drawable/ic_repor</item>
     </style>
 
 
