--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/icone_login" />
+            app:srcCompat="@drawable/icone_app" />
 
         <TextView
             android:id="@+id/txtTitulo"
@@ -39,17 +39,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/logo" />
 
-        <EditText
-            android:id="@+id/txtsenha"
-            style="@style/txtInputLogin"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:drawableRight="@drawable/ic_olho"
-            android:hint="@string/inserirSenha"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtlogin" />
 
         <EditText
             android:id="@+id/txtlogin"
@@ -62,6 +51,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />
 
+        <EditText
+            android:id="@+id/txtsenha"
+            style="@style/txtInputLogin"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:drawableRight="@drawable/ic_olho"
+            android:hint="@string/inserirSenha"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtlogin" />
 
 
         <androidx.appcompat.widget.AppCompatButton
