--- a/app/src/main/res/layout/activity_cad_produto.xml
+++ b/app/src/main/res/layout/activity_cad_produto.xml
@@ -27,7 +27,8 @@
         android:layout_marginTop="@dimen/_40sdp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/imagemproduto"/>
 
     <ImageButton
         android:id="@+id/btn_upload"
@@ -116,7 +117,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_Desc"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/cadastrar"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_Atualizar"
@@ -128,7 +130,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_Desc"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/atualizar"/>
 
     <!--
     <androidx.appcompat.widget.AppCompatButton
