--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -36,13 +36,15 @@
             android:layout_marginTop="100dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/fotousuario"/>
 
         <ImageButton
             android:id="@+id/btn_upload"
             style="@style/btn_up_img"
             app:layout_constraintBottom_toBottomOf="@+id/imgUser"
-            app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
+            app:layout_constraintEnd_toEndOf="@+id/imgUser"
+            android:contentDescription="@string/uploadfoto"/>
 
 
         <TextView
@@ -99,7 +101,8 @@
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toStartOf="@+id/btn_sair"
             app:layout_constraintStart_toStartOf="@+id/view_card"
-            app:layout_constraintTop_toBottomOf="@+id/inputSenha"/>
+            app:layout_constraintTop_toBottomOf="@+id/inputSenha"
+            android:contentDescription="@string/cadastrar"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_sair"
@@ -108,7 +111,8 @@
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toEndOf="@+id/btn_Cadastrar"
             app:layout_constraintTop_toBottomOf="@+id/inputSenha"
-            app:layout_constraintEnd_toEndOf="@+id/view_card"/>
+            app:layout_constraintEnd_toEndOf="@+id/view_card"
+            android:contentDescription="@string/sair"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
