--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -37,7 +37,8 @@
         android:layout_marginTop="@dimen/_40sdp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/grafico"/>
 
 
     <TextView
@@ -63,7 +64,7 @@
         app:layout_constraintStart_toStartOf="@+id/card_produto"
         app:layout_constraintTop_toBottomOf="@id/txtProduto"
         app:layout_constraintEnd_toEndOf="@+id/card_produto"
-        />
+        android:contentDescription="@string/listaGrafico"/>
 
     <TextView
         android:id="@+id/txt_item2"
@@ -90,7 +91,7 @@
         app:layout_constraintStart_toStartOf="@+id/card_produto"
         app:layout_constraintEnd_toEndOf="@+id/card_produto"
         app:layout_constraintTop_toBottomOf="@id/txt_item2"
-        android:text="teste"
+        android:text="0"
         android:textAlignment="center"
         android:layout_marginStart="10sp"
         android:layout_marginEnd="10sp"/>
