--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="@dimen/_54sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/cartaousuario"/>
 
     <ImageButton
         android:id="@+id/btn_Add"
@@ -26,7 +27,8 @@
         android:layout_marginTop="@dimen/_23sdp"
         app:layout_constraintEnd_toStartOf="@+id/btn_Lista"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_usuario" />
+        app:layout_constraintTop_toBottomOf="@+id/card_usuario"
+        android:contentDescription="@string/adicionarProduto"/>
 
     <ImageButton
         android:id="@+id/btn_Lista"
@@ -35,7 +37,8 @@
         android:layout_marginEnd="@dimen/_31sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_Add"
-        app:layout_constraintTop_toBottomOf="@+id/card_usuario" />
+        app:layout_constraintTop_toBottomOf="@+id/card_usuario"
+        android:contentDescription="@string/listarProdutos"/>
 
     <ImageButton
         android:id="@+id/btn_EditAccount"
@@ -46,6 +49,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_Sair"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_Add"
+        android:contentDescription="@string/abrirGrafico"
       />
 
 
@@ -58,6 +62,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btn_EditAccount"
         app:layout_constraintTop_toBottomOf="@+id/btn_Lista"
+        android:contentDescription="@string/sair"
       />
 
 
@@ -71,7 +76,8 @@
         android:layout_marginEnd="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="@+id/card_usuario"
         app:layout_constraintTop_toTopOf="@+id/card_usuario"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/fotousuario"/>
 
 
     <TextView
