--- a/app/src/main/res/layout/activity_user_config.xml
+++ b/app/src/main/res/layout/activity_user_config.xml
@@ -27,13 +27,15 @@
         android:layout_marginTop="@dimen/_77sdp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/fotousuario"/>
 
     <ImageButton
         android:id="@+id/btn_upload"
         style="@style/btn_up_img"
         app:layout_constraintBottom_toBottomOf="@+id/imgUser"
-        app:layout_constraintEnd_toEndOf="@+id/imgUser"/>
+        app:layout_constraintEnd_toEndOf="@+id/imgUser"
+        android:contentDescription="@string/uploadfoto"/>
 
     <ImageView
         android:id="@+id/icon_email"
@@ -80,7 +82,8 @@
         android:layout_marginTop="@dimen/_23sdp"
         app:layout_constraintStart_toStartOf="@+id/card_User"
         app:layout_constraintEnd_toStartOf="@+id/btn_sair"
-        app:layout_constraintTop_toBottomOf="@+id/card_User"/>
+        app:layout_constraintTop_toBottomOf="@+id/card_User"
+        android:contentDescription="@string/atualizarFoto"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_sair"
@@ -89,5 +92,6 @@
         android:layout_marginTop="@dimen/_23sdp"
         app:layout_constraintStart_toEndOf="@+id/btn_salvar_img"
         app:layout_constraintEnd_toEndOf="@+id/card_User"
-        app:layout_constraintTop_toBottomOf="@+id/card_User"/>
+        app:layout_constraintTop_toBottomOf="@+id/card_User"
+        android:contentDescription="@string/sair"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
