--- a/app/src/main/res/layout/produto_item.xml
+++ b/app/src/main/res/layout/produto_item.xml
@@ -17,12 +17,12 @@
         android:layout_height="wrap_content">
 
 
-
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgProd"
             style="@style/card_user"
             android:layout_width="@dimen/_54sdp"
-            android:layout_height="@dimen/_54sdp"/>
+            android:layout_height="@dimen/_54sdp"
+            android:contentDescription="@string/imagemproduto" />
 
 
 
@@ -66,7 +66,8 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/btn_rounded"
-            android:src="@drawable/ic_edit_prod" />
+            android:src="@drawable/ic_edit_prod"
+            android:contentDescription="@string/editar"/>
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
